--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -50,19 +50,18 @@ jobs:
       with:
         registry: ghcr.io
         username: ${{ github.repository_owner }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+        password: ${{ secrets.GIT_TOKEN }}
 
     - name: Set build arguments
       if: github.event_name != 'release'
       run: echo "BUILD_ARGS=--test" >> $GITHUB_ENV
 
     - name: Build landingpage
-      uses: home-assistant/builder@2023.03.0
+      uses: Vioneta/builder@2023.03.0
       with:
         args: |
           $BUILD_ARGS \
           --target /data \
           --no-latest \
           --machine landingpage=${{ matrix.machine }}
-      env:
-        CAS_API_KEY: ${{ secrets.CAS_TOKEN }}
+
